gcc/testsuite/rust/compile/issue-3904.rs
static STATIC_1: dyn = *#[serde()]; // { dg-error "found unexpected token .;. in null denotation" "" { target *-*-* } 0 }
